Fix header issues (more generally) when strings are too long
In some translations, the nav strings are too long, causing the nav links
to be pushed beneath the language dropdown. In a previous check-in, we
simply adjusted the margins and hoped it would work for most languages.

This change addresses the issue more generically. It caps the width of
each individual link. When they're too wide, text is clipped and
ellipses are added. Title attributes are also added for each link,
so users can see the full text in a tooltip for any of the clipped
strings.

--- a/pegasus/sites.v3/hourofcode.com/styles/060-hoc-specific.css
+++ b/pegasus/sites.v3/hourofcode.com/styles/060-hoc-specific.css
@@ -26,6 +26,8 @@
 #language-dropdown .selectize-input {
   padding: 2px 8px;
   min-height: 28px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 #hoc-nav {
   display: inline-block;
@@ -37,12 +39,18 @@
   padding: 0;
 }
 #hoc-nav ul li {
+  font-size: 18px;
+  color: white;
   display: inline-block;
   float: left;
-  padding-top: 0.25em;
-  margin-right: 0.50em;
+  padding: 0.25em 0em;
+  margin-right: 1em;
   text-indent: 0;
   list-style-type: none;
+  max-width: 150px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 #hoc-nav ul li:before {
   content: none;      /* Needed to remove the bullet disc. This was set from other CSS. */
@@ -63,6 +71,7 @@
 #hoc-nav-hamburger {
   font-size: 24px;
   color: white;
+  vertical-align: middle;
   text-decoration: none;
   display: none;
 }
@@ -133,11 +142,7 @@ iframe {
   text-align:right;
   margin-top: 50px;
 }
-@media (max-width: 768px) {
-  .centered {
-    text-align: left;
-    margin-top: 0px;
-  }
+@media (max-width: 992px) {
   #hoc-nav {
     position: relative;
   }
@@ -154,7 +159,7 @@ iframe {
   }
   #hoc-nav ul:after {   /* This is the arrow in the responsive menu */
     bottom: 100%;
-    left: 2em;
+    left: 2.2em;
     border: solid transparent;
     content: " ";
     height: 0;
@@ -170,6 +175,8 @@ iframe {
     display: block;
     float: none;
     margin: 1em 2em 1em 1em;
+    white-space: normal;
+    overflow: visible;
   }
   #hoc-nav-hamburger {
     display: inline-block;
@@ -177,6 +184,12 @@ iframe {
   #hoc-nav-hamburger:hover,
   #hoc-nav-hamburger:active {
     color: rgb(255, 138, 0);
+  }
+}
+@media (max-width: 768px) {
+  .centered {
+    text-align: left;
+    margin-top: 0px;
   }
 }
 @media (max-width: 500px) {
